k8s/gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: api-gateway
spec:
  type: ClusterIP
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
